[package]
name = "indaflow_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "svg", "tokio"] }
iced_aw = { version = "0.11.0", features = ["menu"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
rfd = "0.15.2"
tokio = { version = "1.43.0", features = ["full"] }
